--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
     --icon-color: #AFB1B8;
 
     /*  animations */
-    --time-duration: 250ms;
+    --time-duration: 2500ms;
     --time-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -114,6 +114,8 @@ button{
     line-height: 1.14;
     letter-spacing: 0.02em;
     fill: currentColor;
+
+    transition: color var(--time-duration) var(--time-function);
 }
 
 .nav-list{
@@ -206,6 +208,8 @@ button{
     letter-spacing: 0.06em;
     border: none;
     border-radius: 4px;
+
+    transition: background-color var(--time-duration) var(--time-function);
 }
 
 .hero-btn:hover, 
@@ -380,7 +384,12 @@ button{
     width: 100%;
     height: 100%;
     border-radius: 50%;
+
     fill: var(--icon-color);
+    background-color: var(--alternative-accent-color);
+
+    transition: background-color var(--time-duration) var(--time-function),
+    fill var(--time-duration) var(--time-function);
 }
 
 .team-icon-link:hover,
@@ -425,6 +434,9 @@ button{
     border-style: solid;
     border-radius: 4px;
     fill: var(--icon-color);
+
+    transition: border-color var(--time-duration) var(--time-function),
+    fill var(--time-duration) var(--time-function);
 }
 
 .clients-icon{
@@ -445,6 +457,13 @@ button{
 
 .contact{
     color: var(--opacity-color);
+
+    transition: color var(--time-duration) var(--time-function);
+}
+
+.contact:hover,
+.contact:focus {
+    color: var(--accent-font-color);
 }
 
 .info-desc {
@@ -453,8 +472,14 @@ button{
     font-style: normal;
 }
 
-.info-desc:hover,
-.info-desc:focus{
+.info-desc.logo-alt{
+    color: var(--alternative-accent-color);
+
+    transition: color var(--time-duration) var(--time-function);
+}
+
+.info-desc.logo-alt:hover, 
+.info-desc.logo-alt:hover{
     color: var(--accent-font-color);
 }
 
@@ -468,7 +493,6 @@ button{
     align-items: baseline;
     gap: 94px;
 }
-
 
 address {
     margin-top: 20px;
@@ -508,6 +532,8 @@ address li:not(:last-child){
     border-radius: 50%;
     background-color: rgba(255,255,255,0.1);
     color: var(--main-background-color);
+
+    transition: background-color var(--time-duration) var(--time-function);
 }
 
 .footer-icon{
