--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
     --icon-color: #AFB1B8;
 
     /*  animations */
-    --time-duration: 2500ms;
+    --time-duration: 250ms;
     --time-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -547,6 +547,66 @@ address li:not(:last-child){
     background-color: var(--accent-font-color);
 }
 
+
+/* -------------------------------- modal----------------------------------- */
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+
+    background-color: rgba(0, 0, 0, 0.2);
+
+    opacity: 1;
+
+    transition: opacity var(--time-duration) var(--time-function);
+}
+
+.backdrop.is-hidden{
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.5);
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 528px;
+    height: 281px;
+
+    background-color: var(--main-background-color);
+
+    transition: transform var(--time-duration) var(--time-function);
+} 
+
+
+
+.modal-close-btn{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+
+}
+
 /* -------------------------------- Portfolio page-------------------------- */
 
 .portfolio{
@@ -574,6 +634,10 @@ address li:not(:last-child){
     letter-spacing: 0.03em;
     border: none;
     border-radius: 4px;
+
+    transition: color var(--time-duration) var(--time-function), 
+                background-color var(--time-duration) var(--time-function),
+                box-shadow var(--time-duration) var(--time-function);
 }
 
 .portfolio-btn:hover,
@@ -604,6 +668,11 @@ address li:not(:last-child){
     gap: 30px;
 }
 
+.portfolio-link{
+    box-shadow: none;
+    transition: box-shadow var(--time-duration) var(--time-function);
+}
+
 .portfolio-link:hover,
 .portfolio-link:focus{
     display: block;
@@ -618,4 +687,33 @@ address li:not(:last-child){
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
+}
+
+.portfolio-img-thumb{
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-img-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 63px;
+    
+    background-color: rgba(33, 150, 243, 0.9);
+    color: var(--alternative-accent-color);
+    line-height: 1.56;
+    overflow: auto;
+
+    transform: translateY(100%);
+    transition: transform var(--time-duration) var(--time-function);
+}
+
+.portfolio-link:hover .portfolio-img-overlay,
+.portfolio-link:focus .portfolio-img-overlay{
+    transform: translateY(0%);
 }
